# ChrysalixLinux64

./: .gitignore  .~lock.DOCUMENTATION.doc#  CMakeLists.txt  DOCUMENTATION.doc  README.md  autoexec.ini  file.cx
VSCodePlugin/crysalix-syntax/: package.json
VSCodePlugin/crysalix-syntax/syntaxes/: chrysalix.tmLanguage.json
VSCodePlugin/crysalix-syntax/themes/: chrysalix-color-theme.json
src/: CTable.h  CharsetHelper.cpp  ChrysalixLinux64.cpp  DataHelper.cpp  Helpers.h  Instruction.h  InstructionFunctions.cpp  InstructionFunctions.h  LangLib.cpp  LangLib.h  Machine.cpp  Machine.h  Parser.cpp  Parser.h  ValidateHelper.cpp  Var.cpp  Var.h
